# simulation_ws

./: .gitignore  README.md
build_isolated/: catkin_make_isolated.cache
build_isolated/manager/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/manager/catkin_generated/installspace/: manager.pc  managerConfig.cmake  setup.sh
build_isolated/manager/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager_msgs/atomic_configure/: .rosinstall  _setup_util.py  setup.sh
build_isolated/manager_msgs/catkin_generated/: generate_cached_setup.py  manager_msgs-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/manager_msgs/catkin_generated/installspace/: .rosinstall  manager_msgs-msg-paths.cmake  manager_msgs.pc  manager_msgsConfig.cmake
build_isolated/manager_msgs/cmake/: manager_msgs-genmsg-context.py  manager_msgs-genmsg.cmake
build_isolated/manager_msgs/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/manager_msgs/gtest/googlemock/: CTestTestfile.cmake  Makefile  (+1 more)
build_isolated/simulation/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/simulation/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/simulation/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/manager/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel_isolated/manager_msgs/: .catkin  local_setup.sh
devel_isolated/simulation/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/manager/: CMakeLists.txt
src/manager/src/: main.cpp  manager.cpp  manager.h  plan.cpp  plan.h  thread.cpp  thread.h
src/manager_msgs/msg/: Plan.msg  Status.msg
src/manager_ros/manager/: CMakeLists.txt
src/manager_ros/manager/configs/: 640x480_camera_calibration.yml
src/manager_ros/manager/launch/: manager.launch
src/manager_ros/manager/src/: main.cpp
src/manager_ros/manager/src/Core/: Detector.cpp  Detector.h  log.cpp  log.h  manager.cpp  manager.h  plan.cpp  plan.h  thread.cpp  thread.h
src/manager_ros/manager/src/Driver/: can.cpp  can.h
src/manager_ros/manager/src/Video/: VideoCapture.cpp  VideoCapture.h
src/manager_ros/manager_msgs/: CMakeLists.txt
src/manager_ros/manager_msgs/msg/: Plan.msg  Type.msg
src/simulation/: CMakeLists.txt  package.xml
src/simulation/configs/: nav.rviz
src/simulation/gazebo/: move.xacro
src/simulation/launch/: car.launch  map_server.launch  nav_map.launch  nav_slam.launch  path.launch  slam.launch
src/simulation/map/: nav.pgm  nav.yaml
src/simulation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  teb_local_planner_params.yaml
(+65 files in other folders)
